# LedPiCode

./: App.js  Cargo.toml  EnvironmentFile  led-frontend.service  led.service  package.json  playbook.yml
.github/workflows/: rust.yml
backend/: Cargo.toml  notes.org
backend/.github/workflows/: rust.yml
backend/src/: hardware.rs
backend/src/color/: mod.rs
backend/src/lights/commands/: mod.rs
backend/src/lights/manager/: mod.rs
backend/src/time/: mock.rs  mod.rs
backend/src/web/: mod.rs  tests.rs
components/: Task.js
frontend/: App.js  App.tsx  light_manager.test.ts  light_manager.ts  package-lock.json  package.json  temp.d.ts
frontend/components/: Task.js  light.test.ts  light.ts  light_ui.tsx
src/: controler.rs  hardware.rs  main.rs  strip.rs
src/Time/: mock.rs  mod.rs  real.rs
src/color/: constants.rs  mod.rs  tests.rs
src/lights/: color.rs  config.rs  controler.rs  light_group.rs  light_manager.rs  mod.rs  strip.rs  tests.rs
src/lights/color/: mod.rs  tests.rs
src/lights/commands/: mod.rs  tests.rs
src/lights/manager/: mod.rs  tests.rs
src/time/: mod.rs  real.rs
src/web/: mod.rs  tests.rs
