[package]
name = "led_lights"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]