[package]
name = "led_lights"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"


[target.'cfg(not(target_os = "macos"))'.dependencies]
rppal = "0.11.3"